--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'java'
 }
 
-group = 'com.example'
-version = '1.2'
+group = 'net.p4pingvin4ik'
+version = '1.4'
 
 repositories {
     mavenCentral()
